--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <header>
   <nav>
     <ul>
-      <li><a href="/" routerLinkActive="active">Home</a></li>
+      <li><a href="/portfolio" routerLinkActive="active">Home</a></li>
       <li><a href="/resume" routerLinkActive="active">Resume</a></li>
       <li><a href="/projects" routerLinkActive="active">Projects</a></li>
       <li><a href="/contact" routerLinkActive="active">Contact</a></li>
