--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -6,8 +6,8 @@
     <h1>Venkat Narayana Kothakota</h1>
     <p>Frontend Developer based in Hyderabad</p>
     <div class="hero-buttons">
-      <a href="/resume" class="btn-primary">View Resume</a>
-      <a href="/projects" class="btn-secondary">My Projects</a>
+      <a href="portfolio/resume" class="btn-primary">View Resume</a>
+      <a href="portfolio/projects" class="btn-secondary">My Projects</a>
     </div>
   </div>
 </div>
