--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
   <nav>
     <ul>
       <li><a href="/portfolio" routerLinkActive="active">Home</a></li>
-      <li><a href="portfolio/resume" routerLinkActive="active">Resume</a></li>
-      <li><a href="portfolio/projects" routerLinkActive="active">Projects</a></li>
-      <li><a href="portfolio/contact" routerLinkActive="active">Contact</a></li>
+      <li><a href="/resume" routerLinkActive="active">Resume</a></li>
+      <li><a href="/projects" routerLinkActive="active">Projects</a></li>
+      <li><a href="/contact" routerLinkActive="active">Contact</a></li>
     </ul>
   </nav>
 </header>
