--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,8 +1,10 @@
 <!-- landing.component.html -->
 <div class="landing-page">
-
-
-  <div class="hero-section">
+  <div class="welcome-message">
+    <h2>Welcome to My Portfolio!</h2>
+    <p>Explore my work and learn more about what I do.</p>
+  </div>
+  <div class="hero-section hidden">
     <h1>Venkat Narayana Kothakota</h1>
     <p>Frontend Developer based in Hyderabad</p>
     <div class="hero-buttons">
@@ -10,4 +12,6 @@
       <a href="portfolio/projects" class="btn-secondary">My Projects</a>
     </div>
   </div>
+
+  <div class="tread-design hidden"></div> <!-- Tread design element -->
 </div>
