--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -12,7 +12,7 @@ body {
 header {
   background: linear-gradient(to right, #2193b0, #6dd5ed); /* Semi-transparent background */
   padding: 10px 20px;
-  width: 100%;
+  /* width: 100%; */
   z-index: 1000;
   position: relative; /* Use relative positioning to ensure flow of content */
 }
@@ -89,9 +89,9 @@ header nav ul li a.active {
     flex-direction: column;
     align-items: center;
     background: linear-gradient(to right, #2193b0, #6dd5ed); /* Consistent with header */
-    padding: 1rem;
-    margin: 0; /* Remove margin to ensure proper spacing */
-    width: 100%;
+    /* padding: 1rem; */
+    /* margin: 0;  */
+    /* width: 100%; */
   }
 
   header nav ul li {
