--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -2,7 +2,7 @@
 <div class="resume-container">
   <header class="resume-header">
     <div class="profile-header">
-      <img src="../../assets/resume-image.jpg" alt="Profile Picture" class="profile-picture"/>
+      <img src="assets/resume-image.jpg" alt="Profile Picture" class="profile-picture"/>
       <div class="header-text">
         <h1>{{ name }}</h1>
         <p>{{ title }} - {{ location }}</p>
@@ -10,7 +10,7 @@
       </div>
     </div>
     <a (click)="downloadPDF()" class="download-btn">
-      <img src="assets/download-icon.png" alt="Download Resume" />
+      
       Download Resume
     </a>
     
