--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -9,10 +9,10 @@
         <p><a [href]="linkedin" target="_blank">LinkedIn Profile</a> | {{ email }} | {{ phone }}</p>
       </div>
     </div>
-    <a (click)="downloadPDF()" class="download-btn">
+    <button (click)="downloadPDF()" class="download-btn">
       
       Download Resume
-    </a>
+    </button>
     
   </header>
 
