--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -74,6 +74,8 @@ body {
   align-items: center;
   margin-top: 1rem;
   transition: background-color 0.3s ease;
+  border: none;
+  cursor: pointer;
 }
 
 .download-btn:hover {
