--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -11,6 +11,9 @@
       <button class="btn-primary" onclick="window.location.href='portfolio/resume'">View Resume</button>
       <button class="btn-secondary" onclick="window.location.href='portfolio/projects'">My Projects</button>
     </div>
+    <button  class="download-btn" onclick="window.location.href='portfolio/resume'">
+      testing
+    </button>
     
   </div>
 
