--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -8,13 +8,9 @@
     <h1>Venkat Narayana Kothakota</h1>
     <p>Frontend Developer based in Hyderabad</p>
     <div class="hero-buttons">
-      <button class="btn-primary" onclick="window.location.href='portfolio/resume'">View Resume</button>
-      <button class="btn-secondary" onclick="window.location.href='portfolio/projects'">My Projects</button>
+      <a href="portfolio/resume" class="btn-primary">View Resume</a>
+      <a href="portfolio/projects" class="btn-secondary">My Projects</a>
     </div>
-    <button  class="download-btn" onclick="window.location.href='portfolio/resume'">
-      testing
-    </button>
-    
   </div>
 
   <div class="tread-design hidden"></div> <!-- Tread design element -->
