--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -3,7 +3,14 @@
   <div class="welcome-message">
     <h2>Welcome to My Portfolio!</h2>
     <p>Explore my work and learn more about what I do.</p>
+    
   </div>
+  <video   controls autoplay muted style="zoom: 80%;">
+    <source src="assets/hii.mp4" type="video/mp4">
+    <source src="asset/hii.mp4" type="video/webm">
+    Your browser does not support the video tag.
+  </video>
+  
   <div class="hero-section hidden">
     <h1>Venkat Narayana Kothakota</h1>
     <p>Frontend Developer based in Hyderabad</p>
