--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -37,7 +37,7 @@
 
 /* Landing Page Styles */
 .landing-page {
-  background-color: black;
+  background-color: #f1f1f1;
   color: white;
   text-align: center;
   position: absolute;
@@ -137,6 +137,11 @@
     width: 4px; /* Slightly thinner line for mobile */
     height: 80px; /* Adjust height for mobile */
   }
+  video {
+   margin-top: 100px;
+  
+  }
+  
 }
 
 @media (max-width: 480px) {
@@ -158,4 +163,19 @@
     width: 3px; /* Thinner line for very small screens */
     height: 60px; /* Shorter line for very small screens */
   }
+  video {
+  
+    margin-top: 100px;
+  }
 }
+
+/* video */
+/* Ensure the video scales correctly */
+video {
+  width: 500px;
+  /* width: 100%; */
+  /* height: auto;  */
+  /* display: block; */
+  max-width: 100%; /* Ensures it doesn't exceed the container width */
+}
+
