--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -5,7 +5,7 @@
     <p>Explore my work and learn more about what I do.</p>
     
   </div>
-  <video   controls autoplay muted style="zoom: 80%;">
+  <video autoplay muted style="zoom: 80%;">
     <source src="assets/hii.mp4" type="video/mp4">
     <source src="asset/hii.mp4" type="video/webm">
     Your browser does not support the video tag.
