--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -1,4 +1,13 @@
 /* landing-page.component.css */
+/* Keyframes for fade-in effect */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 
 /* Welcome Message */
 .welcome-message {
@@ -10,11 +19,10 @@
   color: rgb(12, 11, 11);
   text-align: center;
   z-index: 1; /* Ensure it appears above other content if necessary */
-  opacity: 1;
-  
+  opacity: 0; /* Start with an opacity of 0 */
+  animation: fadeIn 2s ease-in forwards; /* Apply fade-in animation */
   user-select: none; /* Prevent text selection */
 }
-
 .welcome-message h2 {
   font-size: 2rem;
   margin: 0;
@@ -25,15 +33,6 @@
   margin: 10px 0 0;
 }
 
-/* Keyframes for fading out */
-@keyframes fadeOut {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
 
 /* Landing Page Styles */
 .landing-page {
