--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -88,7 +88,7 @@ header nav ul li a.active {
   header nav ul {
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(to right, #2193b0, #6dd5ed); /* Consistent with header */
+    /* background: linear-gradient(to right, #2193b0, #6dd5ed);  */
     /* padding: 1rem; */
     /* margin: 0;  */
     /* width: 100%; */
